--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -6,13 +6,23 @@
     align-items: center;
 }
 
-img {
+
+
+.cartIcon {
     margin-left: 150px;
     margin-top: 3px;
     /* width: 15; */
     height: 30px;
     background: #2874f0;
 
+}
+
+.logoIcon {
+    margin-left: 150px;
+    margin-top: 3px;
+    /* width: 15; */
+    height: 30px;
+    background: #2874f0;
 }
 
 .inputBox {
