--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -42,12 +42,14 @@
 
 .text {
     margin-left: 25px;
+    margin-top: 10px;
     color: white;
     font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 .cart {
+    margin-top: 10px;
     color: white;
     font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
