--- a/src/Components/Product/ProductComponent/Product.css
+++ b/src/Components/Product/ProductComponent/Product.css
@@ -3,7 +3,9 @@
     gap: 1rem;
     width: 100% !important;
     border: none;
+
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: center;
+    ;
 }
