--- a/src/Components/Product/RenderProduct/RenderProduct.css
+++ b/src/Components/Product/RenderProduct/RenderProduct.css
@@ -6,6 +6,47 @@
     /* width: 220px; */
 }
 
+.home-container {
+    height: 18rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-bottom: 1px solid #f0f0f0;
+    width: 18rem;
+    box-shadow: 0 0 10px 5px rgb(224, 224, 224);
+    /* border: #f0f0f0 solid; */
+    overflow: hidden;
+    padding: 5px;
+    margin: 5px;
+
+}
+
+.main-container {
+
+    position: relative;
+}
+
+
+.home-container>img {
+    height: 200px;
+    width: 190px;
+
+}
+
+.home-container>div>h5 {
+    width: 50% !important;
+    font-size: 14px;
+    color: #212121 !important;
+    text-decoration: none !important;
+    text-align: center;
+    margin: auto;
+    margin-top: 10px;
+
+}
+
+.home-container:hover {}
+
+
 p {
     font-size: 14px;
     font-family: Roboto, Arial, sans-serif;
